OO-3617: add style and other options to portfolio image part
Add the image style options (position, size), title (with several
options), caption, source and description